@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-10T08:13:37Z",
-  "count_outdated" : 382,
-  "uniques_outdated" : 207,
+  "timestamp" : "2022-07-10T16:15:14Z",
+  "count_outdated" : 383,
+  "uniques_outdated" : 208,
   "count" : 411,
   "uniques" : 223,
   "clones" : [
-    {
-      "timestamp": "2022-06-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-27T00:00:00Z",
       "count": 2,
